* Added a little protection for the known #nick teach bug... [pyborg.py]
* Altered the default created entry when there is no qdb.dat to be more functional (it works with hello now ;)) [pyborg.py]
* Alia now responds when her nick is used in actions! [pyborg-irc.py]
* Alia can now learn and respond with actions! [pyborg-irc.py & pyborg.py]
* Made commands used in a channel not suffer the dreaded #nick replacement issue [pyborg-irc.py]
* Added in some clever #nick replacement tricks to broaden Alia's nick centric responses & cleaned up some bad code [pyborg-irc.py]
* You don't want it to replace Alia with #nick in Private messages... [pyborg-irc.py]
* Made longer responses have a maximum of 5 seconds delay before being said [pyborg.py]
* Unfiltering the teach system's responses like it was supposed to [pyborg.py]
* Responds to the lowercase version of own nickname because people don't use Tab auto-completion [pyborg-irc.py]
* Split auto-rebuild functions into it's own function in preparation for the new timers system [pyborg.py]
* Made the timers threaded for purging, saving and rebuilding of database [pyborg.py]
* Change Timers time for saving, purging and rebuilddic to every 2 hours 5 minutes, 5 hours and 3 days 1 hour respectively - This is to avoid them clashing with each other [pyborg.py]
* Fixed the locale characters stripping issue by making the regex only strip mIRC control codes [pyborg.py]
* Added a check for empty nicknames with the new 'smart' replacement trick [pyborg-irc.py]
* Made the timers stop when pyborg closes [pyborg-irc.py & pyborg.py]
* Compartmentlized responses to ONLY taught responses when bot is in silent mode [pyborg-irc.py & pyborg.py]
* Fixed the teach system by making it only match words with up to 4 extra letter variations [pyborg.py]
* Changed the !find command to return the triggers that match the phrase search [pyborg.py]