@@ -73,3 +73,4 @@ Initial release
 * Compartmentlized responses to ONLY taught responses when bot is in silent mode [pyborg-irc.py & pyborg.py]
 * Fixed the teach system by making it only match words with up to 4 extra letter variations [pyborg.py]
 * Changed the !find command to return the triggers that match the phrase search [pyborg.py]
+* Fixed the crash caused by doing actions to the bot introduced with the new regex [pyborg.py]
